@@ -1,5 +1,9 @@
 2021-05-08 belangeo <belangeo@gmail.com>
 
+    * TableMorph checks table sizes before interpolating to prevent segmentation fault.
+
+2021-05-08 belangeo <belangeo@gmail.com>
+
     * Scale's exp argument now supports float or PyoObject.
 
 2021-05-08 belangeo <belangeo@gmail.com>
